[package]
name = "my-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
protobuf = "3.0.0-alpha.9"
gray_matter = "0.2.2"

[build-dependencies]
protobuf = "3.0.0-alpha.9"
protobuf-codegen = "3.0.0-alpha.9"
