[package]
name = "my-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
protobuf = "3.0"
gray_matter = "0.2"
derive-new = "0.5"
anyhow = "1.0"
regex = "1.5"
chrono = "0.4"
prost = "0.10"
indoc = "1.0"

[build-dependencies]
prost-serde = "0.3"

[dev-dependencies]
test-case = "2.2"
